[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
name = "taswira"
version = "0.1.3"
description = "An interactive visualization tool for GCBM"
long_description = { file = "README.md" }
long_description_content_type = "text/markdown"
authors = ["moja global <your-email@example.com>"]
license = "MPL2"
url = "https://github.com/moja-global/taswira"
python = ">=3.6"

[tool.poetry.dependencies]
terracotta = "==0.6.0"
dash = "==1.13.3"
dash-leaflet = "==0.0.19"
plotly = "==4.8.2"
werkzeug = "==1.0.1"
tqdm = "==4.47.0"
markupsafe = "==2.0.1"

[tool.poetry.dev-dependencies]
pylint = ">=2.5.2"
yapf = ">=0.30"
isort = ">=4.3"
pytest = ">=5.2"

[tool.poetry.scripts]
taswira = "taswira:main"

[tool.poetry.classifiers]
"Development Status :: 3 - Alpha"
"Intended Audience :: Other Audience"
"Topic :: Scientific/Engineering :: GIS"
"License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)"
"Programming Language :: Python :: 3"
"Programming Language :: Python :: 3.6"
"Programming Language :: Python :: 3 :: Only"

[tool.poetry.packages]
from = "src"
include = ["src/taswira"]
