[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
name = "taswira"
version = "0.1.3"
description = "An interactive visualization tool for GCBM"
long_description = { file = "README.md" }
long_description_content_type = "text/markdown"
authors = ["moja global <your-email@example.com>"]
license = { text = "MPL2" }
url = "https://github.com/moja-global/taswira"
python_requires = ">=3.6"

[tool.hatch.dependencies]
terracotta = "==0.6.0"
dash = "==1.13.3"
dash-leaflet = "==0.0.19"
plotly = "==4.8.2"
werkzeug = "==1.0.1"
tqdm = "==4.47.0"
markupsafe = "==2.0.1"

[tool.hatch.dev-dependencies]
pylint = ">=2.5.2"
yapf = ">=0.30"
isort = ">=4.3"
pytest = ">=5.2"

[tool.hatch.scripts]
taswira = "taswira:main"

[tool.hatch.packages]
from = "src"
include = ["src/taswira"]
